After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704194 - playbin: glib warning when setting sink properties to NULL
playbin: glib warning when setting sink properties to NULL
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.1.2
Other Linux
: Normal normal
: 1.1.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-14 12:25 UTC by Arnaud Vrac
Modified: 2013-07-15 07:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Arnaud Vrac 2013-07-14 12:25:04 UTC
In 1.1.2 I get a GLib warning when setting any of the audio-sink, video-sink or test-sink properties on playbin to NULL. In this case there should be no warning and the default sink should be used
Comment 1 Sebastian Dröge (slomo) 2013-07-15 07:11:18 UTC
commit 10c91ea5b565bec250c70ed3f5f3d86e4d56e26b
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Jul 15 09:10:30 2013 +0200

    playbin: Don't print a warning when setting a sink to NULL
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704194