playbin: Don't print a warning when setting a sink to NULL

https://bugzilla.gnome.org/show_bug.cgi?id=704194